fixed task card context menu not aligning properly

--- a/web/ui-elements/task-card.css
+++ b/web/ui-elements/task-card.css
@@ -21,7 +21,7 @@
         font-weight: 600;
         display: flex;
         flex-direction: row;
-        align-items: center;
+        align-items: flex-start;
         justify-content: space-between;
         gap: 0.5em;
         padding-bottom: 2px;
